Fix text overflow issue

--- a/packages/app/src/components/game-list/styles.scss
+++ b/packages/app/src/components/game-list/styles.scss
@@ -4,6 +4,7 @@
 }
 
 .game-list {
+  overflow-x: hidden;
   overflow-y: auto;
   background-color: #222; /* for scrollbar */
 }
